--- a/styles/main.css
+++ b/styles/main.css
@@ -51,6 +51,13 @@ img {
     color: #000000;
 }
 
+.ofbody {
+    margin-top: 4em;
+    margin-bottom: 4em;
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+
 .circle {
   margin-bottom: 1em;
 }
@@ -66,14 +73,10 @@ img {
 }
 
 #page_footer {
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    bottom: 1em;
     font-size: 0.65em;
     color: #c9c9c9;
-}
-
-.carousel-slider {
-    height: 60vh !important;
 }
 
 .indicator-item {
