--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ button:hover {
 }
 
 #page_footer {
-    position: absolute;
+    position: relative;
     bottom: 1em;
     font-size: 0.65em;
     color: #c9c9c9;
