--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Script12";
+  src: url("../resources/script12-bt/ScriptBTRoman.ttf")
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -18,13 +23,19 @@ button:hover {
   color: #ffffff !important;
 }
 
+.navbar-fixed {
+    box-shadow: none;
+    border: none;
+}
+
 .title {
     margin: 1em 0;
     border-bottom: 0.1em double #c9c9c9;
+    font-family: Script12, Arial sans-serif;
     font-size: 2em;
     font-weight: bolder;
-    font-style: oblique;
-    color: #ffffff;
+    /*font-style: oblique;*/
+    color: #000000;
 }
 .title:hover {
     color: #d9d9d9;
@@ -59,15 +70,21 @@ button:hover {
   padding: 1em;
   padding-top: 3em;
   padding-bottom: 3em;
+  text-align: center;
 }
 
 #prediction_button {
     margin-top: 1em;
 }
 
+#page_header {
+    text-align: center;
+}
+
 #page_footer {
     position: relative;
     bottom: 1em;
+    text-align: right;
     font-size: 0.65em;
     color: #c9c9c9;
 }
