Adjustments for fonts.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Script12";
-  src: url("../resources/script12-bt/Scrpt12N.ttf")
+  src: url("https://github.com/nasanos/WhichShroom/blob/master/resources/script12-bt/SCRPT12N.ttf")
 }
 
 html {
