--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,7 @@ button:hover {
 }
 
 .button_label {
+    margin-left: 1em;
     border-bottom: 0.1em solid #c9c9c9;
     color: #000000;
     font-size: 1.5em
