--- a/styles/main.css
+++ b/styles/main.css
@@ -97,11 +97,12 @@ button:hover {
 }
 
 #page_footer {
-    position: relative;
-    bottom: 1em;
-    text-align: right;
-    font-size: 0.65em;
-    color: #c9c9c9;
+    //position: relative;
+    //bottom: 1em;
+    //text-align: right;
+    //font-size: 0.65em;
+    //color: #c9c9c9;
+    color: #999999;
 }
 
 .indicator-item {
